--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<h2 class="logo">Prof<span>ile</span></h2>
 			<ul>
 				<li><a href="#content">Home</a></li>
-				<li><a href="#about">About Us</a></li>
+				<li><a href="#about">About Me</a></li>
 				<li><a href="#education_details">Education Details</a></li>
 				<li><a href="#skill">Skills</a></li>
 				<li><a href="#contact-me">Contact Me</a></li>
