--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
 	<div class="skill">
 		<h2>Skills</h2>
 
+		<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c6ea3849-986f-4b96-babc-5b562a744d0e" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js">
+		</script>
 		<div class="content1">
 			<div class="skills-details">
 			  <div class="text">
