--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	 <meta charset="UTF-8">
+  	<meta name="description" content="Personal Profile">
+  	<meta name="keywords" content="HTML,CSS">
+  	<meta name="author" content="Rohith">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Profile website</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
